<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:padding="10dp"
    android:orientation="vertical">

    <Switch
        android:id="@+id/swViewProductMenus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/view_product_menu"
        android:layout_margin="5dp"/>
    <Switch
        android:id="@+id/swAutoEditSalesItem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/AutoEditSalesItem"
        android:layout_margin="5dp"/>
    <Switch
        android:id="@+id/swPhotoAlbum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/photo_albums"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStoreCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/store" />

        <EditText
            android:id="@+id/etStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_url" />

        <EditText
            android:id="@+id/etURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/service_url" />


    </LinearLayout>
</LinearLayout>