<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBg"
    tools:context=".LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="266dp"
                android:layout_height="126dp"
                android:background="@drawable/splash"
                android:layout_margin="10sp" />

            <ProgressBar
                android:id="@+id/progbarRun"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:max="50"
                android:progress="0" />
            <Button
                android:id="@+id/btLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                style="@style/AppTheme.myButton"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/UseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user_name"
                    android:imeActionLabel="@string/error_field_required"
                    android:maxLines="1"
                    style="@style/AppTheme.myEdit"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/error_invalid_user_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    style="@style/AppTheme.myEdit"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    style="@style/AppTheme.myMainButton"
                    android:text="@string/title_activity_login" />

            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>