<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportledgerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/AppTheme.myText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/account" />

            <AutoCompleteTextView
                android:id="@+id/txAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/account"/>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:visibility="invisible"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="1dp"
            android:background="@color/colorgray_alpha"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:padding="2dp"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:text="@string/date"  />

            <TextView
                android:text="@string/explantion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="2dp"/>
            <TextView
                android:text="@string/Depit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="2dp"/>
            <TextView
                android:text="@string/Credit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="2dp"/>
            <TextView
                android:text="@string/balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="2dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#202020"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="731dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRows"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>