<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OrderSaveActivity"
    tools:showIn="@layout/activity_order_save"
    android:background="@color/colorBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/AppTheme.FormColor" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/AppTheme.myText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/customer" />

                <AutoCompleteTextView
                    android:id="@+id/txCustomer"
                    style="@style/AppTheme.myEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/AppTheme.myText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                   android:text="@string/notes" />

                <EditText
                    android:id="@+id/txNotes"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/AppTheme.myEdit"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTotal"
                    style="@style/AppTheme.myText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total"
                    android:textColor="#00FFAA"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txTotal"
                    style="@style/AppTheme.myEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:textColor="#00FFAA"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/tvDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/discount"
                    style="@style/AppTheme.myText"/>

                <EditText
                    android:id="@+id/txDiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    style="@style/AppTheme.myEdit"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/tvPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paid"
                    style="@style/AppTheme.myText"/>

                <EditText
                    android:id="@+id/txPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    style="@style/AppTheme.myEdit"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/tvUnPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unpaid"
                    style="@style/AppTheme.myText"/>

                <EditText
                    android:id="@+id/txUnPaid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:enabled="false"
                    android:ems="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    style="@style/AppTheme.myEdit"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>