<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TransactionActivity"
    tools:showIn="@layout/activity_transaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5sp">

        <LinearLayout
            android:id="@+id/lyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/menu_buton_shape"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvAcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/credit_account"
                        android:textColor="@color/colorWText" />

                    <AutoCompleteTextView
                        android:id="@+id/txCustomer"
                        style="@style/AppTheme.myEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/description"
                        android:textColor="@color/colorWText" />

                    <EditText
                        android:id="@+id/txDescription"
                        style="@style/AppTheme.myEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/value"
                        android:textColor="@color/colorWText" />

                    <EditText
                        android:id="@+id/txValue"
                        style="@style/AppTheme.myEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/btAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="28sp"
                        android:background="@color/colorOrang"
                        android:text="@string/add" />


                </TableRow>

            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5sp"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/tvTotal"
                    style="@style/AppTheme.myText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_margin="5sp"
                    android:textStyle="bold"
                    android:textColor="#00FFAA"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/txTotal"
                    style="@style/AppTheme.myEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5sp"
                    android:enabled="false"
                    android:textStyle="bold"
                    android:textColor="#00FFAA"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/lvOrderItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            style="@style/AppTheme.myEdit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>